First refactoring to JDK 1.8