@@ -1,4 +1,4 @@
-package fairchecks.checks;
+package fairchecks.checks.globalChecks;
 
 import fairchecks.api.IInteroperabilityCheck;
 import org.apache.spark.sql.Dataset;
@@ -54,7 +54,8 @@ public class UriDetailsRetrievalCheck implements IInteroperabilityCheck{
                 if (labelColumn == null) {
                     invalidRows.add("No label column found for controlled URI column: " + column);
                 } else {
-                    candidatePairs.put(column, List.of(labelColumn));
+                    //candidatePairs.put(column, List.of(labelColumn));
+                    candidatePairs.put(column, Arrays.asList(labelColumn));
                 }
             }
         }
